--- a/uni/VWL/2_Teil.tex
+++ b/uni/VWL/2_Teil.tex
@@ -1,4 +1,4 @@
-% Created 2018-05-17 Thu 12:56
+% Created 2018-05-17 Thu 16:07
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -39,7 +39,7 @@
 \newpage
 
 \section{Die kurze Frist}
-\label{sec:org950acfe}
+\label{sec:org992bfd1}
 \begin{itemize}
 \item kombinierter Einsatz von Geld- und Fiskalpolitik\\
 \end{itemize}
@@ -79,7 +79,7 @@ Güternachfrage hängt von vielen Faktoren ab, u.a. vom \textbf{Gütermarkt} und
 \end{enumerate}
 
 \subsection{Der Gütermarkt}
-\label{sec:orgf068c2c}
+\label{sec:org76e20c7}
 Markteilnehmer auf em Gütermarkt sind die volkswirtschaftl. Sektoren (Haushalte, Staat, Unternehmen)
 
 \textbf{Makroökonomischer Gütermarkt=} (gedachte) Zusammenfassung aller Güterkäufe und -verkäufe in einem Land innerhalb 1 Periode (\(\approx\) BIP)
@@ -103,14 +103,14 @@ Die Importe (IM) entsprechen dem Kauf ausländischer Waren \& Dienstleistungen d
 \end{itemize}
 
 \subsubsection{Die gesamtwirtschaftliche Güternachfrage}
-\label{sec:org51f4fa9}
+\label{sec:org4c14213}
 Ausgehend von der Zusammensetzung des Gütermarktes, also der Zusammenfassung aller Güterkäufe und -verkäufe, was wiederum etwa dem BIP entspricht, lässt sich die \textbf{Güternachfrage Z} wie folgt beschreiben: \(Z \equiv C + I + G + (X - IM)\). Dies ist zentral, da wir in der kurzen Frist ja den Fokus auf die Nachfrage und ihren Einfluss legen.
 In einer geschlossenen Marktwirtschaft (keine Ex-/Importe) gilt dann: \(Z \equiv C + I+ G\).
 
 \paragraph{Aufschlüsselung der Bestandteile von Güternachfrage Z}
 \begin{enumerate}
 \item Privater Konsum (C)
-\label{sec:orgfe47be9}
+\label{sec:orge12e72e}
 \begin{itemize}
 \item Konsumentenverhalten wird durch \textbf{Konsumfunktion} C(Y\(_{\text{v}}\)) beschrieben
 \item Konsum C steigt wenn verfügbares Einkommen Y\(_{\text{v}}\) zunimmt: \(C = C(Y_v) \rightarrow \frac{\partial C}{\partial Y_v} > 0\)
@@ -167,11 +167,11 @@ Der Konsum beim Einkommen von Null (autonomer Konsum) sinkt durch die Besteuerun
   \end{axis}
 \end{tikzpicture}
 \item Investitionen (I)
-\label{sec:orgc448711}
+\label{sec:orge83954e}
 \newline
 Investitionen werden in diesem Modell als gegeben betrachtet, d.h als exogen angenommen. Gekennzeichnet wird dies durch einen Strich über der Variable: \(I = \bar{I}\) .
 \item Staatsausgaben (G) und Steuern (T)
-\label{sec:org95cdfc1}
+\label{sec:orgfc4169b}
 \newline
 Basierend auf dem Regierungsprogramm ergibt sich ein bestimmtes Ausmaß an Staatsausgaben und Steuern, in diesem Sinn sind beide ebenfalls exogen: \(G = \bar{G}\) und \(T = \bar{T}\) (T sind Steuern minus Transfers).
 
@@ -179,7 +179,7 @@ Laut Regierungsprogramm sind die Staatsausgaben durch Steuern finanziert, daher 
 Werden Staatsausgaben oder Steuern verändert, um die gesamtwirtschaftliche Nachfrage zu beeinflussen, spricht man von Fiskalpolitik
 \end{enumerate}
 \subsubsection{Gleichgewicht auf dem Gütermarkt (Bestimmung der Produktion)}
-\label{sec:org17e2d56}
+\label{sec:org6b95916}
 Ein \textbf{Gleichgewicht auf dem Gütermarkt} stellt sich dann ein, wenn die \textbf{Güterproduktion Y} der \textbf{Güternachfrage Z} entspricht: \(Y = Z\). Dies ist eine Gleichgewichtsbedingung. Somit gilt (für \(X=IM=0\)):
 \begin{equation*}
 \begin{aligned}
@@ -196,7 +196,7 @@ Im Gleichgewicht entspricht die Produktion Y (linke Seite) der Nachfrage (rechte
 Die Gleichgewichtsbedingung spiegelt die zentrale Modellannahme wieder, dass die Produktion nur durch die Nachfrage bestimmt wird (nachfrageseitiges Modell).
 
 \subsubsection{Gleichungen des Gütermarktmodells}
-\label{sec:orgcfbcb18}
+\label{sec:org0a95c33}
 Das Modell besteht aus folgenden Arten von Gleichungen:
 \begin{itemize}
 \item Definitionsgleichungen, hier: \(Z \equiv C + I + G\) und \(Y_v \equiv Y - T\)
@@ -231,11 +231,11 @@ Y = \frac{1}{1-c_1}*[c_0 - c_1 * \bar{T}+\bar{I}+\bar{G}]
 \end{itemize}
 
 \subsubsection{Graphische Analyse}
-\label{sec:org34c4ced}
+\label{sec:org1b4350a}
 \(\rightarrow\) Siehe handschriftliches Blatt
 
 \subsubsection{Der Multiplikatoreffekt}
-\label{sec:org3b1d3d6}
+\label{sec:orgfe9da55}
 Der Multiplikator ist die Summe sukzessiver Anstiege der Produktion, die aus einem Anstieg der Nachfrage resultieren
 
 Beispielsweise eine Erhöhung der autonomen Staatsausgaben: \(\Delta Y_1 = \Delta \bar{G}\)
@@ -257,7 +257,7 @@ Steigt die autonome Nachfrage um 1 Mio., dann ergibt sich nach \(n\) Runden eine
 \end{equation*}
 
 \subsubsection{Die verbale Analyse}
-\label{sec:org7bf36f4}
+\label{sec:orgf4c848e}
 Kurzfristig (in der kurzen Frist) wird die Produktion von der Nachfrage bestimmt
 \begin{itemize}
 \item die Nachfrage hängt ihrerseitz vom Einkommen ab Z(Y)
@@ -279,7 +279,7 @@ Nach einem Anstieg der Konsumausgaben wird nicht sofort das neue Gleichgewicht e
 Die formale Beschreibung dieser Anpassung der Produktion über die Zeit wird als \textbf{Dynamik} der Anpassung bezeichnet.
 
 \subsubsection{Investition gleich Ersparnis}
-\label{sec:orgd64bc88}
+\label{sec:org5d1b42c}
 Rest des verfügbaren Einkommens, der nicht für Konsum ausgegeben wird, wird gespart:
 
 \begin{itemize}
@@ -307,10 +307,10 @@ I = S + (G-T)
 S = Ersparnis privater Haushalte, (T - G) = Ersparnis des Staates
 
 \subsubsection{Ist die Regierung allmächtig? Eine Warnung}
-\label{sec:org7f55847}
+\label{sec:org1c6fcc6}
 \begin{enumerate}
 \item Kann die Regierung Einfluss nehmen?
-\label{sec:org6851eb3}
+\label{sec:org6f6deed}
 
 Fiskalpolitik = Teil der Finanzpolitik, der dem Stabilisierungsziel gewidmet ist; die Variation von Staatsausgaben bzw -einnahmen zur Beeinflussung der aggregierten Güternachfrage
 \begin{center}
@@ -332,13 +332,13 @@ indirekte Maßnahmen:
 \end{itemize}
 
 \item Wer ist für Fiskalpolitik verantwortlich?
-\label{sec:org0693566}
+\label{sec:org96819c3}
 
 Staat = Institution mit hoheitlicher Gewalt, d.h. Staat ist legitimiert \& fähig Zwangsmaßnahmen auszuüben
 
 Staatsquote = \(\frac{\text{Ausgaben der öffentl. Haushalte}}{\text{Bruttoinlandsprodukt}}\) in Prozent
 \item Kreditfinanzierte Erhöhung der Staatsausgaben
-\label{sec:orgc145a86}
+\label{sec:org8ddfa50}
 
 Eine Erhöhung der Staatsausgaben G erhöht die Nachfrage (\(\rightarrow\) Z-Kurve verschiebt sich nach oben), sodass Einkommen steigt und zwar gemäß dem Multiplikator um \(\frac{\delta Y}{\delta G} = \frac{1}{1-c_1}\).
 
@@ -346,7 +346,7 @@ Da die zusätzlichen Ausgaben kreditfinanziert werden, wird die staatliche Erspa
 
 Da die erhöhten Staatsausgaben kreditfinanziert werden, vergrößert sich der Schuldenstand des Staates (nicht in unserem Modell enthalten!).
 \item Steuerfinanzierte Erhöhung der Staatsausgaben
-\label{sec:org8913f50}
+\label{sec:orgfad82e1}
 
 Eine Erhöhung der Staatsausgaben G wird durch eine gleichzeitige Erhöhung der Steuern T finanziert:
 \begin{equation*}
@@ -368,7 +368,7 @@ Der Multiplikator ist somit lediglich 1 und damit kleiner als bei kreditfinanzie
 \end{equation*}
 
 \item Automatische Stabilisatoren
-\label{sec:orgc54152c}
+\label{sec:org9935559}
 
 Idee: Konjunkturelle Schwankungen der Steuereinnahmen stabilisieren Nachfrage \(Z = c_0 + c_1 *(Y-T)+\bar{I}+\bar{G}\). Steuern (und Transfers) hängen endogen vom Einkommen ab: \(T= t*Y\), mit \(t=\text{Steuersatz} < 1\)
 
@@ -384,7 +384,7 @@ Y = \frac{1}{1-c_1+c_1t}*[c_0+\bar{I}+\bar{G}]
 Der Multiplikator wird kleiner. Bei exogenen Schocks in \(\bar{I}\) oder c\(_{\text{o}}\) fallen Schwankungen geringer aus.
 
 \item Probleme bei Umsetzung direkter Nachfragesteuerung
-\label{sec:orga4e4269}
+\label{sec:org7581194}
 
 \begin{itemize}
 \item Staatsausgaben oder Steuern rasch zu ändern ist nahezu unmöglich
@@ -397,6 +397,58 @@ Der Multiplikator wird kleiner. Bei exogenen Schocks in \(\bar{I}\) oder c\(_{\t
 \end{enumerate}
 
 \subsection{Geld- und Finanzmärkte}
-\label{sec:orgcdeca79}
-F.62
+\label{sec:org72c0576}
+In diesem Kapitel geht es um das \textbf{Gleichgewicht} auf \textbf{Geld-} und \textbf{Finanzmärkten} und die \textbf{Bestimmung des Zinssatzes}.
+
+\textbf{Geld} kann für Transaktionen (zB Kauf/Verkauf) verwendet werden. Es gibt zwei Arten von Geld:
+\begin{itemize}
+\item Bargeld (Münzen und Banknoten)
+\item Sichtguthaben (Girokonten)
+\end{itemize}
+
+Geld kann auch zur Wertaufbewahrung verwendet werden. Da es aber keine Zinsen bringt, werden meist andere Formen der Wertaufbewahrung vorgezogen.
+
+\textbf{Festverzinsliche Wertpapiere} (Bonds) bringen einen positiven Zinssatz i, können aber nicht für Transaktionen verwendet werden.
+
+\textbf{Semantische Fallen:} Geld, Einkommen und Vermögen
+\begin{itemize}
+\item Einkommen besteht aus der Arbeitsvergütung \& Kapitalerträgen in Form von Zinsen \& Dividenden.
+\begin{itemize}
+\item wird in Einheiten pro Zeiteinheit ausgedrückt, es handelt sich also um eine Stromgröße
+\end{itemize}
+\item Ersparnis ist der Teil des Einkommens nach Abzug der Steuern, der nicht ausgegeben wird
+\begin{itemize}
+\item ebenfalls eine Stromgröße
+\end{itemize}
+\item Finanzvermögen (oder einfach Vermögen) ist Wert aller Finanzanlagen abzüglich aller Verbindlichkeiten
+\begin{itemize}
+\item Bestand an Vermögen zu einem gegebenen Zeitpunkt, also eine Bestandsgröße
+\end{itemize}
+\item Finanzanlagen, die man direkt zum Kauf von Gütern einsetzen kann, werden Geld genannt
+\begin{itemize}
+\item Geld beinhaltet Bargeld \& Buchgeld (Sichteinlagen)
+\item ist auch eine Bestandsgröße
+\end{itemize}
+\item unter Investitionen verstehen Ökonomen den Kauf von neuen Anlagegütern (Maschinen, Fabriken, Bürogebäude), der Kauf von Aktien oder anderer Finanzanlagen wird dagegen als Finanzinvestition bezeichnet
+\end{itemize}
+
+Das Finanzvermögen W der Haushalte setzt sich zusammen aus Geldvermögen und Bonds. Geld wird i.d.R durch das Symbol M gekennzeichnet, Bonds(B) ist der Bestand an festverzinslichen Wertpapieren. Sie habenn den Preis p\(_{\text{B}}\) .
+\begin{equation*}
+\begin{aligned}
+W = M + p_B * B
+\end{aligned}
+\end{equation*}
+Haushalte haben darüber zu entscheiden, welchen Teil ihres Vermögens sie in Form von Geld und welchen in Form von Bonds halten. Geld hat den Vorteil der Liquidität, Bonds den eines Zinsertrages. Die Aufteilung ist abhängig von Transaktionsvolumen und -häufigkeit, sowie dem Zinssatz auf Wertpapiere
+\subsubsection{Die Geldnachfrage}
+\label{sec:orgb1328f1}
+Die Geldnachfrage M\(^{\text{d}}\)\ldots{}
+\begin{itemize}
+\item \ldots{}steigt proportional mit dem Nominaleinkommen (\(PY\))
+\item hängt negativ vom Zinssatz i ab (wobei L(i) eine Funktion des Zinssatzes ist)
+\end{itemize}
+\begin{equation*}
+\begin{aligned}
+M^d = PY*L(i)
+\end{aligned}
+\end{equation*}
 \end{document}
