--- a/uni/VWL/2_Teil.tex
+++ b/uni/VWL/2_Teil.tex
@@ -1,4 +1,4 @@
-% Created 2018-05-17 Thu 16:07
+% Created 2018-05-20 Sun 00:36
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -30,7 +30,7 @@
  pdftitle={},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 26.0.91 (Org mode 9.1.6)}, 
+ pdfcreator={Emacs 27.0.50 (Org mode 9.1.9)}, 
  pdflang={English}}
 \begin{document}
 
@@ -39,7 +39,7 @@
 \newpage
 
 \section{Die kurze Frist}
-\label{sec:org992bfd1}
+\label{sec:orgc369fc6}
 \begin{itemize}
 \item kombinierter Einsatz von Geld- und Fiskalpolitik\\
 \end{itemize}
@@ -79,7 +79,7 @@ Güternachfrage hängt von vielen Faktoren ab, u.a. vom \textbf{Gütermarkt} und
 \end{enumerate}
 
 \subsection{Der Gütermarkt}
-\label{sec:org76e20c7}
+\label{sec:orgcf68696}
 Markteilnehmer auf em Gütermarkt sind die volkswirtschaftl. Sektoren (Haushalte, Staat, Unternehmen)
 
 \textbf{Makroökonomischer Gütermarkt=} (gedachte) Zusammenfassung aller Güterkäufe und -verkäufe in einem Land innerhalb 1 Periode (\(\approx\) BIP)
@@ -103,14 +103,14 @@ Die Importe (IM) entsprechen dem Kauf ausländischer Waren \& Dienstleistungen d
 \end{itemize}
 
 \subsubsection{Die gesamtwirtschaftliche Güternachfrage}
-\label{sec:org4c14213}
+\label{sec:orgc37db1f}
 Ausgehend von der Zusammensetzung des Gütermarktes, also der Zusammenfassung aller Güterkäufe und -verkäufe, was wiederum etwa dem BIP entspricht, lässt sich die \textbf{Güternachfrage Z} wie folgt beschreiben: \(Z \equiv C + I + G + (X - IM)\). Dies ist zentral, da wir in der kurzen Frist ja den Fokus auf die Nachfrage und ihren Einfluss legen.
 In einer geschlossenen Marktwirtschaft (keine Ex-/Importe) gilt dann: \(Z \equiv C + I+ G\).
 
 \paragraph{Aufschlüsselung der Bestandteile von Güternachfrage Z}
 \begin{enumerate}
 \item Privater Konsum (C)
-\label{sec:orge12e72e}
+\label{sec:orga22ac14}
 \begin{itemize}
 \item Konsumentenverhalten wird durch \textbf{Konsumfunktion} C(Y\(_{\text{v}}\)) beschrieben
 \item Konsum C steigt wenn verfügbares Einkommen Y\(_{\text{v}}\) zunimmt: \(C = C(Y_v) \rightarrow \frac{\partial C}{\partial Y_v} > 0\)
@@ -167,11 +167,11 @@ Der Konsum beim Einkommen von Null (autonomer Konsum) sinkt durch die Besteuerun
   \end{axis}
 \end{tikzpicture}
 \item Investitionen (I)
-\label{sec:orge83954e}
+\label{sec:orgb318564}
 \newline
 Investitionen werden in diesem Modell als gegeben betrachtet, d.h als exogen angenommen. Gekennzeichnet wird dies durch einen Strich über der Variable: \(I = \bar{I}\) .
 \item Staatsausgaben (G) und Steuern (T)
-\label{sec:orgfc4169b}
+\label{sec:org4940ca5}
 \newline
 Basierend auf dem Regierungsprogramm ergibt sich ein bestimmtes Ausmaß an Staatsausgaben und Steuern, in diesem Sinn sind beide ebenfalls exogen: \(G = \bar{G}\) und \(T = \bar{T}\) (T sind Steuern minus Transfers).
 
@@ -179,7 +179,7 @@ Laut Regierungsprogramm sind die Staatsausgaben durch Steuern finanziert, daher 
 Werden Staatsausgaben oder Steuern verändert, um die gesamtwirtschaftliche Nachfrage zu beeinflussen, spricht man von Fiskalpolitik
 \end{enumerate}
 \subsubsection{Gleichgewicht auf dem Gütermarkt (Bestimmung der Produktion)}
-\label{sec:org6b95916}
+\label{sec:org90211a7}
 Ein \textbf{Gleichgewicht auf dem Gütermarkt} stellt sich dann ein, wenn die \textbf{Güterproduktion Y} der \textbf{Güternachfrage Z} entspricht: \(Y = Z\). Dies ist eine Gleichgewichtsbedingung. Somit gilt (für \(X=IM=0\)):
 \begin{equation*}
 \begin{aligned}
@@ -196,7 +196,7 @@ Im Gleichgewicht entspricht die Produktion Y (linke Seite) der Nachfrage (rechte
 Die Gleichgewichtsbedingung spiegelt die zentrale Modellannahme wieder, dass die Produktion nur durch die Nachfrage bestimmt wird (nachfrageseitiges Modell).
 
 \subsubsection{Gleichungen des Gütermarktmodells}
-\label{sec:org0a95c33}
+\label{sec:org5533bf4}
 Das Modell besteht aus folgenden Arten von Gleichungen:
 \begin{itemize}
 \item Definitionsgleichungen, hier: \(Z \equiv C + I + G\) und \(Y_v \equiv Y - T\)
@@ -231,11 +231,11 @@ Y = \frac{1}{1-c_1}*[c_0 - c_1 * \bar{T}+\bar{I}+\bar{G}]
 \end{itemize}
 
 \subsubsection{Graphische Analyse}
-\label{sec:org1b4350a}
+\label{sec:orgf23c62f}
 \(\rightarrow\) Siehe handschriftliches Blatt
 
 \subsubsection{Der Multiplikatoreffekt}
-\label{sec:orgfe9da55}
+\label{sec:org32fbbaf}
 Der Multiplikator ist die Summe sukzessiver Anstiege der Produktion, die aus einem Anstieg der Nachfrage resultieren
 
 Beispielsweise eine Erhöhung der autonomen Staatsausgaben: \(\Delta Y_1 = \Delta \bar{G}\)
@@ -257,7 +257,7 @@ Steigt die autonome Nachfrage um 1 Mio., dann ergibt sich nach \(n\) Runden eine
 \end{equation*}
 
 \subsubsection{Die verbale Analyse}
-\label{sec:orgf4c848e}
+\label{sec:org84a0e7d}
 Kurzfristig (in der kurzen Frist) wird die Produktion von der Nachfrage bestimmt
 \begin{itemize}
 \item die Nachfrage hängt ihrerseitz vom Einkommen ab Z(Y)
@@ -279,7 +279,7 @@ Nach einem Anstieg der Konsumausgaben wird nicht sofort das neue Gleichgewicht e
 Die formale Beschreibung dieser Anpassung der Produktion über die Zeit wird als \textbf{Dynamik} der Anpassung bezeichnet.
 
 \subsubsection{Investition gleich Ersparnis}
-\label{sec:org5d1b42c}
+\label{sec:orgcf8dce7}
 Rest des verfügbaren Einkommens, der nicht für Konsum ausgegeben wird, wird gespart:
 
 \begin{itemize}
@@ -307,10 +307,10 @@ I = S + (G-T)
 S = Ersparnis privater Haushalte, (T - G) = Ersparnis des Staates
 
 \subsubsection{Ist die Regierung allmächtig? Eine Warnung}
-\label{sec:org1c6fcc6}
+\label{sec:orgf704e9b}
 \begin{enumerate}
 \item Kann die Regierung Einfluss nehmen?
-\label{sec:org6f6deed}
+\label{sec:org3704e58}
 
 Fiskalpolitik = Teil der Finanzpolitik, der dem Stabilisierungsziel gewidmet ist; die Variation von Staatsausgaben bzw -einnahmen zur Beeinflussung der aggregierten Güternachfrage
 \begin{center}
@@ -332,13 +332,13 @@ indirekte Maßnahmen:
 \end{itemize}
 
 \item Wer ist für Fiskalpolitik verantwortlich?
-\label{sec:org96819c3}
+\label{sec:org0829cdc}
 
 Staat = Institution mit hoheitlicher Gewalt, d.h. Staat ist legitimiert \& fähig Zwangsmaßnahmen auszuüben
 
 Staatsquote = \(\frac{\text{Ausgaben der öffentl. Haushalte}}{\text{Bruttoinlandsprodukt}}\) in Prozent
 \item Kreditfinanzierte Erhöhung der Staatsausgaben
-\label{sec:org8ddfa50}
+\label{sec:orgabd7243}
 
 Eine Erhöhung der Staatsausgaben G erhöht die Nachfrage (\(\rightarrow\) Z-Kurve verschiebt sich nach oben), sodass Einkommen steigt und zwar gemäß dem Multiplikator um \(\frac{\delta Y}{\delta G} = \frac{1}{1-c_1}\).
 
@@ -346,7 +346,7 @@ Da die zusätzlichen Ausgaben kreditfinanziert werden, wird die staatliche Erspa
 
 Da die erhöhten Staatsausgaben kreditfinanziert werden, vergrößert sich der Schuldenstand des Staates (nicht in unserem Modell enthalten!).
 \item Steuerfinanzierte Erhöhung der Staatsausgaben
-\label{sec:orgfad82e1}
+\label{sec:orge5acee8}
 
 Eine Erhöhung der Staatsausgaben G wird durch eine gleichzeitige Erhöhung der Steuern T finanziert:
 \begin{equation*}
@@ -368,7 +368,7 @@ Der Multiplikator ist somit lediglich 1 und damit kleiner als bei kreditfinanzie
 \end{equation*}
 
 \item Automatische Stabilisatoren
-\label{sec:org9935559}
+\label{sec:org3a02cc6}
 
 Idee: Konjunkturelle Schwankungen der Steuereinnahmen stabilisieren Nachfrage \(Z = c_0 + c_1 *(Y-T)+\bar{I}+\bar{G}\). Steuern (und Transfers) hängen endogen vom Einkommen ab: \(T= t*Y\), mit \(t=\text{Steuersatz} < 1\)
 
@@ -384,7 +384,7 @@ Y = \frac{1}{1-c_1+c_1t}*[c_0+\bar{I}+\bar{G}]
 Der Multiplikator wird kleiner. Bei exogenen Schocks in \(\bar{I}\) oder c\(_{\text{o}}\) fallen Schwankungen geringer aus.
 
 \item Probleme bei Umsetzung direkter Nachfragesteuerung
-\label{sec:org7581194}
+\label{sec:org82db9d6}
 
 \begin{itemize}
 \item Staatsausgaben oder Steuern rasch zu ändern ist nahezu unmöglich
@@ -397,7 +397,7 @@ Der Multiplikator wird kleiner. Bei exogenen Schocks in \(\bar{I}\) oder c\(_{\t
 \end{enumerate}
 
 \subsection{Geld- und Finanzmärkte}
-\label{sec:org72c0576}
+\label{sec:org7161c6f}
 In diesem Kapitel geht es um das \textbf{Gleichgewicht} auf \textbf{Geld-} und \textbf{Finanzmärkten} und die \textbf{Bestimmung des Zinssatzes}.
 
 \textbf{Geld} kann für Transaktionen (zB Kauf/Verkauf) verwendet werden. Es gibt zwei Arten von Geld:
@@ -440,15 +440,69 @@ W = M + p_B * B
 \end{equation*}
 Haushalte haben darüber zu entscheiden, welchen Teil ihres Vermögens sie in Form von Geld und welchen in Form von Bonds halten. Geld hat den Vorteil der Liquidität, Bonds den eines Zinsertrages. Die Aufteilung ist abhängig von Transaktionsvolumen und -häufigkeit, sowie dem Zinssatz auf Wertpapiere
 \subsubsection{Die Geldnachfrage}
-\label{sec:orgb1328f1}
+\label{sec:org346d251}
 Die Geldnachfrage M\(^{\text{d}}\)\ldots{}
 \begin{itemize}
 \item \ldots{}steigt proportional mit dem Nominaleinkommen (\(PY\))
-\item hängt negativ vom Zinssatz i ab (wobei L(i) eine Funktion des Zinssatzes ist)
+\item \ldots{}hängt negativ vom Zinssatz i ab (wobei L(i) eine Funktion des Zinssatzes ist)
 \end{itemize}
 \begin{equation*}
 \begin{aligned}
 M^d = PY*L(i)
 \end{aligned}
 \end{equation*}
+
+\textbf{Die Ableitung der Geldnachfrage}\\
+Für ein gegebenenes Nominaleinkommen \(P_1 Y_1\) erhöht ein niedriger Zinssatz die Geldnachfrage. 
+Mit steigendem Zinsatz geht die Liquiditätspräferenz (Präferes für "Flüssiges" also Geld) und damit auch die Geldnachfrage zurück. Screenshot 71
+
+Bei jedem gegebenen Zinssatz verschiebt sich eine Erhöhung des Nominaleinkommens die Geldnachfrage nach rechts: Screenshot 72
+
+\textbf{Geldnachfrage \& Zinsen - Empirische Evidenz}\\
+Wie gut bildet die Geldnachfragegleichung die Realität ab?
+\(M^d = PY * L(i)\) \(\rightarrow\) teile beide Seiten durch \(PY\): \(\frac{M^d}{PY}=L(i)\)
+
+\(L(i)\) = \textbf{Kassenhaltungskoeffizient} \(\equiv \frac{\text{Geldhaltung}}{\text{Nominaleinkommen}}\)
+\begin{itemize}
+\item wenn der Zinssatz hoch ist, dann sollte \(L(i)\) niedrig sein
+\item wenn der Zinssatz niedrig ist, dann sollte \(L(i)\) hoch sein
+\end{itemize}
+
+Kehrwert: \(\frac{1}{L(i)}\) = \textbf{Umlaufgeschwindigkeit des Geldes}
+
+\subsubsection{Gleichgewicht auf dem Geldmarkt}
+\label{sec:org2176165}
+Wir betrachten in diesem Modell zunächst eine Wirtschaft, in der es \textbf{keine Geschäftsbanken} gibt. Es gibt dhaer \textbf{kein Buchgeld}. Geld ist gleichbedeutend mit \textbf{Bargeld}. Angenommen die Zentralbank entscheidet sich, eine Geldmenge in Höhe von \(\bar{M}\) zur Verfügung zu stellen, so dass das Geldangebot \(M^s = \bar{M}\) ist.
+So stellt sich ein Gleichgewicht auf dem Geldmarkt dann ein, wenn das Geldangebot gleich der Geldnachfrage ist:
+\begin{equation*}
+\begin{aligned}
+M^s = \bar{M}
+\bar{M} = PY * L(i)
+\end{aligned}
+\end{equation*}
+
+\begin{enumerate}
+\item Geldnachfrage, Geldangebot \& Gleichgewichtszinssatz
+\label{sec:org034edf2}
+Die Bestimmung des Zinssatzes: Der Zinssatz pendelt sich im Gleichgewicht so ein, dass die (zinsabhängige) Geldnachfrage dem gegebenen Geldangebot entspricht. Screenshot 76
+
+Die Auswirkungen eines \emph{höheren Nominaleinkommens} auf den Gleichgewichtszins: Mit steigendem Nominaleinkommen verschiebt sich die Geldnachfragekurve nach rechts, der Gleichgewichtszins steigt. Screenshot 77
+
+Die Auswirkungen eines \emph{höheren Geldangebots} auf den Gleichgewichtszins: Eine Zunahme des Geldangebots verschiebt die Geldangebotskurve nach rechts, der Gleichgewichtszins sinkt: Screenshot 78
+\end{enumerate}
+
+\subsubsection{Geldpolitik}
+\label{sec:orgbaf64e6}
+Wie kann die Zentralbank das Geldangebot verändern und was geschieht, wenn sie es verändert?
+\begin{itemize}
+\item Geldmengenerhöhung = Zentralbank kauft Wertpapiere und bezahlt mit neu geschöpftem Geld
+\item Geldmengenverringerung = Zentralbank verkauft Wertpapiere und entzieht dem Wirschaftskreislauf Geld
+\end{itemize}
+
+Derartige Operationen werden \textbf{Offernmarktgeschäfte} genannt, da sie am "offenen Markt" für Wertpapiere durchgeführt werden.
+In moderenen Volkswirtschaften steuern alle Zentralbanken die Geldmenge über solche Offenmarktgeschäfte.
+
+Die Bilanz der Zentralbank: Screenshot 80
+
+Die Aktiva der Zentralbank bestehen aus den Wertpapieren, die sie hält. Ihre Passiva entsprechen der Geldmenge.
 \end{document}
